--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -19,3 +19,15 @@
   align-items: center;
   gap: 2rem;
 }
+.mb-1{
+    margin-bottom: 8rem;
+}
+.mb-2{
+    margin-bottom: 5rem;
+}
+.mb-3{
+    margin-bottom: 3rem;
+}
+.mb-4{
+    margin-bottom: 1.5rem;
+}
