--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -19,15 +19,21 @@
   align-items: center;
   gap: 2rem;
 }
-.mb-1{
-    margin-bottom: 8rem;
+.mb-1 {
+  margin-bottom: 8rem;
 }
-.mb-2{
-    margin-bottom: 5rem;
+.mb-2 {
+  margin-bottom: 5rem;
 }
-.mb-3{
-    margin-bottom: 3rem;
+.mb-3 {
+  margin-bottom: 3rem;
 }
-.mb-4{
-    margin-bottom: 1.5rem;
+.mb-4 {
+  margin-bottom: 1.5rem;
+}
+.header {
+  background-color: white;
+  border-bottom: 1px solid rgb(46, 45, 45);
+  margin-bottom: 1rem;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
