--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import "./modules/varibles";
 @import "./modules/classes";
 @import "./modules/reset";
+
+header {
+  nav {
+    padding: 20px 0;
+    ul {
+      li {
+        font-size: 18px;
+        font-weight: 500;
+      }
+    }
+  }
+}
