done fixing issues

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,7 +7,7 @@ header {
   nav {
     padding: 20px 0;
     ul {
-      li {
+      .li {
         font-size: 18px;
         font-weight: 500;
         text-transform: uppercase;
