--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -38,9 +38,16 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
-.active{
-    color: #2c2cc0;
+.active {
+  color: #2c2cc0;
 }
-.btn{
-    background-color: #2c2cc0;
+.btn {
+  background-color: #2929e4;
+  padding: 12px 20px;
+  cursor: pointer;
+  transition: 3ms;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
