--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -59,6 +59,15 @@ header {
       margin-bottom: 1rem;
       padding: 1rem;
       background-color: white;
+      h4 {
+        font-size: 18px;
+        font-weight: 600;
+      }
+      span{
+        font-size: 16px;
+        font-weight: 500;
+        color: #baadad;
+      }
     }
   }
 }
