--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -44,16 +44,23 @@ header {
 .card {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .image {
-    width: 100%;
+    width: 490px;
+    height: 490px;
     img {
       width: 100%;
+      height: 100%;
     }
   }
   .body {
     display: flex;
+    width: 100%;
     flex-direction: column;
-    .addingCart{
+    .addingCart {
       display: flex;
       flex-direction: column;
       align-items: center;
