--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -53,3 +53,12 @@
   font-size: 18px;
   color: white;
 }
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.w-100 {
+  width: 100%;
+}
