--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -49,11 +49,12 @@ header {
   justify-content: center;
   align-items: center;
   .image {
-    width: 490px;
+    width: 100%;
     height: 490px;
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
   .body {
@@ -64,6 +65,7 @@ header {
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 0.5rem;
     }
     .title {
       display: flex;
