--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -66,6 +66,13 @@ header {
       flex-direction: column;
       align-items: center;
       gap: 0.5rem;
+      .buttons {
+        h3 {
+          span {
+            font-size: 18px;
+          }
+        }
+      }
     }
     .title {
       display: flex;
