working on cart

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -69,8 +69,10 @@ header {
       .buttons {
         h3 {
           span {
-            font-size: 18px;
+            font-size: 38px;
+            color: black;
           }
+          color: #5a5858;
         }
       }
     }
