--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -66,6 +66,9 @@ header {
       flex-direction: column;
       align-items: center;
       gap: 0.5rem;
+      .remove {
+        background-color: #f22424;
+      }
       .buttons {
         h3 {
           span {
