--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -5,15 +5,15 @@
   display: flex;
 }
 .container {
-  width: 90%;
-  margin: 0 auto;
+  width: 90% !important;
+  margin: 0 auto !important;
 }
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.navLinks {
+.navLink {
   display: flex;
   justify-content: center;
   align-items: center;
