--- a/src/sass/modules/_reset.scss
+++ b/src/sass/modules/_reset.scss
@@ -12,7 +12,6 @@ body {
   background-color: #f1e7e7;
 }
 a {
-  color: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
+  font-size: 1rem !important;
+  font-weight: 600;
 }
