--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,7 +8,10 @@
   gap: 2rem;
   grid-template-columns: 1fr;
   @media screen and (min-width: 560px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  @media screen and (min-width: 1460px) {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 .card {
@@ -20,7 +23,8 @@
   align-items: center;
   .image {
     width: 100%;
-    height: 490px;
+    height: 372px;
+    padding: 1rem;
     img {
       width: 100%;
       height: 100%;
