writing some code

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -60,6 +60,7 @@
       margin-bottom: 1rem;
       padding: 1rem;
       background-color: white;
+      gap: 1rem;
       h4 {
         font-size: 18px;
         font-weight: 600;
