--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -59,6 +59,7 @@
       align-items: baseline;
       margin-bottom: 1rem;
       padding: 1rem;
+      border-top: 1px solid gray;
       background-color: white;
       gap: 1rem;
       h4 {
