--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -33,8 +33,8 @@
   }
   .body {
     display: flex;
-    width: 100%;
     flex-direction: column;
+    width: 100%;
     .addingCart {
       display: flex;
       flex-direction: column;
@@ -57,7 +57,6 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 1rem;
       padding: 1rem;
       border-top: 1px solid gray;
       background-color: white;
@@ -71,6 +70,9 @@
         font-weight: 500;
         color: #baadad;
       }
+    }
+    p {
+      padding: 1rem;
     }
   }
 }
