--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -42,6 +42,7 @@
       gap: 0.5rem;
       .remove {
         background-color: #f22424;
+        margin-bottom: 10px;
       }
       .buttons {
         h3 {
