working on varibles

--- a/src/sass/modules/_varibles.scss
+++ b/src/sass/modules/_varibles.scss
@@ -1,1 +1,10 @@
 $font: "Roboto", sans-serif;
+$black: #000000;
+$gray: #5a5858;
+$white: #ffffff;
+$redBg: #f22424;
+
+// Media screens
+
+$mobile: 560px;
+$lap: 1460px;
