--- a/src/sass/modules/_varibles.scss
+++ b/src/sass/modules/_varibles.scss
@@ -3,6 +3,8 @@ $black: #000000;
 $gray: #5a5858;
 $white: #ffffff;
 $redBg: #f22424;
+$blueBg: #2929e4;
+$shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 
 // Media screens
 
