added some updates

--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -84,3 +84,12 @@
 .myBtn {
   background-color: $blueBg !important;
 }
+.myLinks {
+  a {
+    font-size: 20px !important;
+    font-weight: 600;
+  }
+}
+.navbar-nav .nav-link.active {
+  color: $blueBg !important;
+}
