adding some padding

--- a/src/sass/modules/_reset.scss
+++ b/src/sass/modules/_reset.scss
@@ -1,9 +1,8 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  border: none;
+  margin: 0 !important;
+  padding: 0 !important;
+  box-sizing: border-box !important;
+  outline: none !important;
   font-family: $font !important;
   list-style: none !important;
   text-decoration: none !important;
