--- a/src/sass/modules/_reset.scss
+++ b/src/sass/modules/_reset.scss
@@ -1,6 +1,6 @@
 * {
   margin: 0 !important;
-  padding: 0 !important;
+  padding: 0;
   box-sizing: border-box !important;
   outline: none !important;
   font-family: $font !important;
