--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -35,6 +35,7 @@
   border-bottom: 1px solid $gray;
   margin-bottom: 1rem;
   box-shadow: $shadow;
+  padding: 10px 0 !important;
   button {
     position: relative;
     p {
@@ -85,6 +86,9 @@
   background-color: $blueBg !important;
 }
 .myLinks {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   a {
     font-size: 20px !important;
     font-weight: 600;
