--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -39,10 +39,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.5rem !important;
       .remove {
         background-color: $redBg;
-        margin-bottom: 10px;
+        margin-bottom: 10px !important;
       }
       .buttons {
         h3 {
