--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -13,6 +13,9 @@
   justify-content: space-between !important;
   align-items: center !important;
 }
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
 .header {
   border-bottom: 1px solid $gray;
   margin-bottom: 1rem;
