created header modules

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "./modules/varibles";
 @import "./modules/classes";
 @import "./modules/reset";
+@import "./Header.module.scss";
 
 .grid {
   display: grid;
