--- a/src/sass/Header.module.scss
+++ b/src/sass/Header.module.scss
@@ -1,24 +1,6 @@
-.header {
-  border-bottom: 1px solid $gray;
-  margin-bottom: 1rem;
-  box-shadow: $shadow;
-  padding: 10px 0 !important;
-  button {
-    position: relative;
-    p {
-      position: absolute;
-      top: 0;
-      right: 2px;
-      width: 1.5rem;
-      height: 1.5rem;
-      border-radius: 50px;
-      background-color: $redBg;
-      color: $white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-      font-weight: 600;
-    }
-  }
+.light {
+  background-color: red !important;
+}
+.dark {
+  background-color: blue !important;
 }
