makking some changes

--- a/src/sass/Header.module.scss
+++ b/src/sass/Header.module.scss
@@ -1,6 +1,6 @@
 .light {
-  background-color: red !important;
+  background-color: #ffff !important;
 }
 .dark {
-  background-color: blue !important;
+  background-color: black !important;
 }
