--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -38,7 +38,7 @@
 .btn {
   padding: 12px 20px !important;
   cursor: pointer !important;
-  transition: 3ms !important;
+  transition: all 300ms ease !important;
   border-radius: 8px !important;
   display: flex !important;
   justify-content: center !important;
@@ -72,4 +72,15 @@
 }
 .navbar-nav .nav-link.active {
   color: $blueBg !important;
+}
+.toggler {
+  cursor: pointer;
+  background-color: $gray;
+  padding: 12px 20px;
+  color: $white;
+  border-radius: 8px;
+  transition: all 300ms ease;
+  &:hover {
+    opacity: 0.7 !important;
+  }
 }
