--- a/src/sass/modules/_classes.scss
+++ b/src/sass/modules/_classes.scss
@@ -39,10 +39,10 @@
   padding: 12px 20px !important;
   cursor: pointer !important;
   transition: all 300ms ease !important;
-  border-radius: 8px !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 18px !important;
   color: $white !important;
   &:hover {
@@ -72,15 +72,4 @@
 }
 .navbar-nav .nav-link.active {
   color: $blueBg !important;
-}
-.toggler {
-  cursor: pointer;
-  background-color: $gray;
-  padding: 12px 20px;
-  color: $white;
-  border-radius: 8px;
-  transition: all 300ms ease;
-  &:hover {
-    opacity: 0.7 !important;
-  }
 }
